<resources>
    <string-array name="type">
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>



    </string-array>
    <string name="app_name">GOT</string>
    <string name="icon_heart">&#xf1ee;</string>
    <string name="icon_triangle"> &#xf071;</string>
    <string name="icon_spinner">&#xf110;</string>
    <string name="icon_game">&#xf11b;</string>
    <string name="icon_sq">&#xf0c8;</string>

    <string name="icon_lock">&#xf023;</string>
    <string name="icon_circle">&#xf111;</string>
    <string name="icon_volume">&#xf028;</string>
    <string name="icon_mobile">&#xf10b;</string>
    <string name="icon_circlef"> &#xf111; </string>
    <string name="icon_tint">  &#xf043;  </string>


    <string name="icon_play">&#xf04b;</string>
    <string name="icon_wifi">&#xf1eb;</string>
    <string name="icon_user">&#xf2bd;</string>
    <string name="icon_feed"> &#xf09e;</string>
    <string name="icon_setting">&#xf013;</string>
    <string name="icon_playGame">&#xf144;</string>
    <string name="icon_menu">&#xf0c9;</string>
    <string name="icon_rsss">&#xf09e;</string>
    <string name="icon_star_o">&#xf006;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_userplus">&#xf234;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_square">&#xf04d;</string>
    <string name="icon_cloud">&#xf0c2;</string>
    <string name="icon_male">&#xf183;</string>
    <string name="icon_car">&#xf1b9;</string>
    <string name="icon_arrow">&#xf0a9;</string>
    <string name="icon_glass">&#xf000;</string>
    <string name="icon_globe">&#xf0ac;</string>
    <string name="icon_gratipay">&#xf184;</string>
    <string name="icon_emptystar">&#xf123;</string>


    <string name="icon_trophy">&#xf091;</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="invitation_title">Invite title</string>
    <string name="invitation_message">Invite message lololololo </string>
    <string name="invitation_deep_link">https://k3svr.app.goo.gl/TPlw</string>
    <string name="invitation_custom_image">http://whitedevs.com/wp-content/uploads/2016/02/whiteDevs-logo.png</string>
    <string name="invitation_cta">Install</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_app_invite_invitation">AppInviteInvitation</string>


    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>



    <string name="app_id">371049103274</string>
    <string name="package_name">com.whitedevs.gameoftrumps</string>
    <string name="achievement_achieve_01">CgkIqv__oeYKEAIQAQ</string>
    <string name="leaderboard_my_little_leaderboard">HzkA4Kz04F8MRYIBVU</string>


    <string name="txtMFITW"> Find it to WIN!</string>
    <string name="txtMLose">You Lose!</string>
    <string name="txtMWin1Star">Fine!</string>
    <string name="txtMWin2Star">You did it</string>
    <string name="txtMWin3Star">You made it</string>
</resources>
