<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_40sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:id="@+id/txtVolume"
            android:layout_marginTop="@dimen/_50sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textSize="@dimen/_25sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:text="@string/icon_volume"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volume"
            android:textSize="@dimen/_16sdp"
            android:paddingTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/_30sdp"/>
        <!--<ToggleButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/blueBg"-->
        <!--android:layout_gravity="right"-->
        <!--android:checked="true"-->
        <!--android:paddingTop="@dimen/_10sdp"-->
        <!--android:layout_marginLeft="@dimen/_150sdp"/>-->
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:theme="@style/MySwitch"
            android:layout_marginLeft="@dimen/_120sdp"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/_5sdp"
            android:checked="true"/>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_minus5sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="#c0c0c0"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_40sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:id="@+id/txtVibration"
            android:layout_marginTop="@dimen/_50sdp"
            android:paddingTop="@dimen/_10sdp"
            android:textSize="@dimen/_25sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:text="@string/icon_mobile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vibration"
            android:textSize="@dimen/_16sdp"
            android:paddingTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/_30sdp"/>
        <!--<ToggleButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/blueBg"-->
        <!--android:layout_gravity="right"-->
        <!--android:checked="true"-->
        <!--android:paddingTop="@dimen/_10sdp"-->
        <!--android:layout_marginLeft="@dimen/_150sdp"/>-->
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/_120sdp"
            android:theme="@style/MySwitch"
            android:paddingBottom="@dimen/_5sdp"

            android:checked="false"/>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_minus15sdp"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_40sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_tint"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_30sdp"
            android:gravity="center"
            android:textSize="@dimen/_25sdp"
            android:id="@+id/circlef"
            android:textColor="@color/blueBg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_tint"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_100sdp"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:id="@+id/circlef2"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_tint"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_110sdp"
            android:gravity="center"
            android:id="@+id/circlef3"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/transparent_black_hex_15"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_4sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sky"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_30sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Strawberry"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_60sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Night"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_75sdp"
            android:gravity="center"

            android:textSize="@dimen/_15sdp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_4sdp">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/blueBg"
            android:layout_marginLeft="@dimen/_20sdp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/_90sdp"
            />
<RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/transparent_black_hex_15"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="@dimen/_100sdp"
    />
    </LinearLayout>
</LinearLayout>
